home page new sections

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -107,11 +107,12 @@
     "sale_badge_color_scheme": "scheme-4",
     "sold_out_badge_color_scheme": "scheme-3",
     "brand_headline": "",
-    "brand_description": "<p></p>",
+    "brand_description": "<p>Shusshh is more than a collection of body massagers; it's a movement that invites you to elevate your lifestyle. Join us in embracing a holistic approach to well-being, where self-care becomes an art, and every Shusshh product is a brushstroke that adds serenity to your life's canvas.</p>",
+    "brand_image": "shopify://shop_images/image_6_1.png",
     "brand_image_width": 100,
-    "social_facebook_link": "",
-    "social_instagram_link": "",
-    "social_youtube_link": "",
+    "social_facebook_link": "https://www.facebook.com/shusshh.in/",
+    "social_instagram_link": "https://www.instagram.com/shusshh.in/",
+    "social_youtube_link": "https://www.youtube.com/@shusshh_in",
     "social_tiktok_link": "",
     "social_twitter_link": "",
     "social_snapchat_link": "",
